--- a/index.html
+++ b/index.html
@@ -50,7 +50,61 @@
                 Portugal.</p>
         </div>
     </section>
-    <h2 id="ruler">The ruler of Real Mardid</h2>
+    <h2 class="ruler">The golden time in <span>Real Mardid</span></h2>
+
+    <section class="sctions">
+        <div class="goal">
+            <img src="images/low (1).png" alt="">
+        </div>
+        <div class="goal">
+            <h1>2013 To 2018</h1>
+            <p>
+                At the start of the 2013–14 season, Ronaldo signed a new contract that extended his stay by three years
+                to 2018, with a salary of €17 million net, making him briefly the highest-paid player in football.[154]
+                He was joined at the club by winger Gareth Bale, whose world record transfer fee of €100 million
+                surpassed the fee Madrid had paid for Ronaldo four years prior.Among his haul was his 400th career goal,
+                in 653 appearances for club and country, which came with a brace against Celta Vigo on 6 January; he
+                dedicated his goals to compatriot Eusébio, who had died two days before.In the 2016–17 UEFA Champions
+                League quarter-final against Bayern in April, Ronaldo scored both goals in a 2–1 away win which saw him
+                make history by becoming the first player to reach 100 goals in UEFA club competition.At the start of
+                the 2017–18 season, Ronaldo scored Madrid's second goal in the 80th minute of a 3–1 win over Barcelona
+                in the first leg of the 2017 Supercopa de España at Camp Nou; however, he was sent off two minutes later
+                and missed the second leg.[211] On 23 October, his performances throughout 2017 saw him awarded The Best
+                FIFA Men's Player award for the second consecutive year.A day later, Ronaldo won the 2017 Ballon d'Or,
+                receiving his fifth-time award on the Eiffel Tower in Paris.[214] On 16 December, he scored a free kick
+                winner, as Madrid won their second Club World Cup in a row by beating Grêmio in the final.[215] On 3
+                March 2018, he scored two goals in a 3–1 home win over Getafe, his first being his 300th La Liga goal in
+                his 286th appearance, making him the fastest player to reach this landmark and only the second player to
+                do so after Messi.[216] On 18 March, he reached his 50th career hat-trick, scoring four goals in a 6–3
+                win against Girona.[217]
+            </p>
+
+        </div>
+    </section>
+    <h2 class="ruler">Return To <span>Manchester United</span></h2>
+    <section>
+
+        <div class="one">
+            <h3>2021 To Present</h3>
+            <p>On 27 August 2021, Manchester United announced they had reached an agreement with Juventus to re-sign
+                Ronaldo, subject to agreement of personal terms, visa and medical.[283] The transfer was reported as
+                costing an initial £12.85 million, with a two-year contract plus an optional year, and was confirmed on
+                31 August.[284] Ronaldo was given the number 7 shirt after Edinson Cavani agreed to switch to 21.[285]
+                transfer, overtaking Messi after his move to Paris Saint-Germain.On 11 September, Ronaldo made his
+                second debut at Old Trafford, scoring the opening two goals in a 4–1 league victory against Newcastle
+                United.[287] On 29 September, he scored a last-minute winner in United's 2–1 victory at home to
+                Villarreal
+                in the Champions League, and overtaking Iker Casillas as the player with the most appearances in the
+                competition.[288] On 2 December, Ronaldo scored twice in a 3–2 home league win against Arsenal, taking
+                him
+                The first 24 hours of Ronaldo's shirt sales was reported to have broken the all-time record following a
+                past 800 top-level career goals.[289]</p>
+
+
+        </div>
+        <div><img src="images/R (1) (1).png" alt=""></div>
+    </section>
+
 </body>
 
 </html>
