--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <img class="ron" src="images/top-banner.png" alt="">
     <h1>Welcome To <span>CR7</span> Gallery</h1>
-    <h2>All the records are included in here</h2>
+    <h2>The Short Story of <span>Cristiano Ronaldo</span></h2>
     <section class="top-banner">
         <div class="ronaldo"><img src="images/light-blue (1).png" alt=""></div>
         <div class="ronaldo"><img src="images/birch-organic-fabrics-mod-basics-knit-mineral-20.png" alt=""></div>
